--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="#services">Services</a>
+            <a href="#experience">Experience</a>
+            <a href="#formation">Formation</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -51,7 +52,7 @@
 
             </div>
 
-            <a href="#" class="btn">Download CV</a>
+            <a href="images/Curriculum Vitae Angel Salazar.pdf" target="_blank" rel="noopener noreferrer" class="btn">Download CV</a>
         </div>
 
         <div class="profession-container">
@@ -99,7 +100,7 @@
     </section>
 
     <!-- services section design -->
-    <section class="services" id="services">
+    <section class="services" id="experience">
         <h2 class="heading">Work <span>Experience</span></h2>
 
         <div class="services-container">
@@ -127,7 +128,7 @@
         </div>
     </section>
 
-    <section class="services" id="services">
+    <section class="services" id="formation">
         <h2 class="heading"><span>Formation</span></h2>
 
         <div class="services-container">
@@ -159,8 +160,8 @@
                 <div class="portfolio-layer">
                     <h4>Harry Potter</h4>
                     <div class="btn-port">
-                        <a href="#" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external bx-tada' ></i></a>
-                        <a href="#" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github bx-tada' ></i></a>
+                        <a href="https://harry-potter-page.vercel.app/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external bx-tada' ></i></a>
+                        <a href="https://github.com/angelsalazarmottola/HarryPotterPage" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github bx-tada' ></i></a>
                     </div>  
                 </div>
             </div>
