se agregan imagenes de developer

--- a/index.html
+++ b/index.html
@@ -81,20 +81,20 @@
         </div>
 
         <div class="home-img">
-            <img src="images/perfil_home.png" alt="">
+            <img src="images/principal-image.png" alt="">
         </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/about.png" alt="">
+            <img src="images/about-me-image.png" alt="">
         </div>
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Hi, I'm Here To Help Your Next Project!</h3>
-            <p>FullStack programmer and currently re/start Cloud Administrator in the certification process. Highly qualified professional in AWS cloud administration and programming, with experience in development teams and the management and optimization of cloud resources for companies in various sectors. My ability to design and develop efficient and secure cloud solutions, as well as my ability to program and automate processes, make me an invaluable asset for any work team. My proactive approach, my attention to detail and my ability to work in dynamic and collaborative environments allow me to offer innovative, high-quality solutions that meet the needs of my clients and contribute to the success of the projects in which I participate.</p>
+            <p>FullStack programmer and currently Cloud Re/Start Administrator in the certification process. I am passionate about AWS, with knowledge in designing innovative and secure cloud solutions for companies. I stand out for my ability to optimize the efficiency and scalability of systems, from the configuration of services such as EC2, S3 and RDS to the automation of processes with CloudFormation and Lambda. My commitment to staying up to date on the latest AWS trends allows me to always offer the best solutions to clients. Working in dynamic and collaborative environments is my passion, and I love contributing to the success of projects with high-quality solutions.</p>
             <!-- <a href="#" class="btn">Read More</a> -->
         </div>
     </section>
