se agrega curriculum vitae

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             </div>
 
-            <a href="images/Curriculum Vitae Angel Salazar.pdf" target="_blank" rel="noopener noreferrer" class="btn">Download CV</a>
+            <a href="images/C.V-Angel Salazar.pdf" target="_blank" rel="noopener noreferrer" class="btn">Download CV</a>
         </div>
 
         <div class="profession-container">
