Se corrigen errores,se sube nuevo contenido multimedia y se crean nuevas secciones

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
             <a href="#experience">Experience</a>
             <a href="#formation">Formation</a>
             <a href="#portfolio">Portfolio</a>
+            <a href="#certifications">Certifications</a>
             <a href="#contact">Contact</a>
         </nav>
 
-        <div class="bx bx-moon" id="darkMode-icon"></div>
+        <!-- <div class="bx bx-moon" id="darkMode-icon"></div> -->
 
         <div class="bx bx-menu" id="menu-icon"></div>
     </header>
@@ -52,27 +53,19 @@
 
             </div>
 
-            <a href="images/C.V-Angel Salazar.pdf" target="_blank" rel="noopener noreferrer" class="btn">Download CV</a>
+            <a href="images/C.V Angel Salazar Mottola.pdf" target="_blank" rel="noopener noreferrer" class="btn">Download CV</a>
         </div>
 
         <div class="profession-container">
             <div class="profession-box">
                 <div class="profession" style="--i:0;">
                     <i class='bx bx-code-alt'></i>
-                    <h3>Fullstack Developer</h3>
+                    <h3>Web Developer</h3>
                 </div>
                 <div class="profession" style="--i:1;">
                     <i class='bx bxl-aws'></i>
                     <h3>AWS Computing</h3>
                 </div>
-                <!-- <div class="profession" style="--i:2;">
-                    <i class='bx bx-palette'></i>
-                    <h3>Entrepreneur</h3>
-                </div> -->
-                <!-- <div class="profession" style="--i:3;">
-                    <i class='bx bx-video-recording'></i>
-                    <h3>Videographer</h3>
-                </div> -->
 
                 <div class="circle"></div>
             </div>
@@ -94,7 +87,7 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Hi, I'm Here To Help Your Next Project!</h3>
-            <p>FullStack programmer and currently Cloud Re/Start Administrator in the certification process. I am passionate about AWS, with knowledge in designing innovative and secure cloud solutions for companies. I stand out for my ability to optimize the efficiency and scalability of systems, from the configuration of services such as EC2, S3 and RDS to the automation of processes with CloudFormation and Lambda. My commitment to staying up to date on the latest AWS trends allows me to always offer the best solutions to clients. Working in dynamic and collaborative environments is my passion, and I love contributing to the success of projects with high-quality solutions.</p>
+            <p>I am a Full Stack Programmer with experience in web application development. I have worked in a team of collaborative development, where I have contributed with my technical skills and my ability to solve problems efficiently. As an AWS Certified Cloud Practitioner and AWS Cloud Re/Start Administrator, I have a strong understanding of cloud services and AWS infrastructure, allowing me to develop and maintain scalable and secure applications. I stand out for my strong work ethic, effective communication skills and ability to work well in a team. I am constantly looking for opportunities to learn and grow in the field of information technology. English level B1</p>
             <!-- <a href="#" class="btn">Read More</a> -->
         </div>
     </section>
@@ -107,47 +100,37 @@
             <div class="services-box">
                 <img src="images/lofwork.png" alt="">
                 <h3>Frontend Developer</h3>
-                <p>Development of Lofwork's VisorPyme project that consists of providing a tool to entrepreneurs to give a diagnosis in different pillars based on a series of questions that they will have to answer and in turn create a simple Blog where Lofwork can upload desired content.</p>
-                <h3>Company: Incubadora DesafioLatam-Lofwork</h3>
-                <!-- <a href="#" class="btn">Read More</a> -->
+                <p>Development of Lofwork's VisorPyme project. The project consists of providing a software tool to entrepreneurs that, based on a series of comprehensive questions regarding their venture, will result in a detailed diagnosis in different pillars about the state of their venture, and in turn, create a simple Blog where Lofwork can upload desired content.</p>
             </div>
-            <!-- <div class="services-box">
-                <i class='bx bxs-paint'></i>
-                <h3>Graphic Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi itaque similique, architecto
-                    eaque ut quas delectus pariatur nesciunt in eligendi mollitia dicta.</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-            <div class="services-box">
-                <i class='bx bx-bar-chart-alt'></i>
-                <h3>Digital Marketing</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi itaque similique, architecto
-                    eaque ut quas delectus pariatur nesciunt in eligendi mollitia dicta.</p>
-                <a href="#" class="btn">Read More</a>
-            </div> -->
         </div>
     </section>
 
-    <section class="services" id="formation">
+    <!-- testimonial design -->
+    <section id="formation" class="testimonial-container">
         <h2 class="heading"><span>Formation</span></h2>
 
-        <div class="services-container">
-            <div class="services-box">
-                <img src="images/Generation_Chile.png" alt="">
-                <h3>Cloud Administrator Re/Start AWS</h3>
-                <h3>Generation Chile</h3>
-                <h3>Duration: Jan 2024-April 2024</h3>
-                <!-- <a href="#" class="btn">Read More</a> -->
-            </div>
-            <div class="services-box">
-                <img src="images/desafiolatam.png" alt="">
-                <h3>Fullstack Javascript Developer</h3>
-                <h3>DesafíoLatam</h3>
-                <h3>Duration: Dec 2021-April 2022</h3>
-                <!-- <a href="#" class="btn">Read More</a> -->
+        <div class="testimonial-wrapper">
+            <div class="testimonial-box mySwiper">
+                <div class="testimonial-contents swiper-wrapper">
+                    <div class="testimonial-slide swiper-slide">
+                        <img class="imageform" src="images/Generation_Chile.png" alt="">
+                        <h3>AWS Administrator Cloud Re/Start</h3>
+                        <p>In this study program I acquired fundamental skills to manage and operate cloud systems using AWS. I learned how to configure, deploy and maintain cloud applications and services using various AWS technologies and services. Skills and knowledge acquired: AWS administration, cloud computing, cloud security, cloud networking, cloud storage. Program Duration: Jan 2024 - May 2024</p>
+                    </div>
+                    <div class="testimonial-slide swiper-slide">
+                        <img class="imageform" src="images/desafiolatamss.png" alt="">
+                        <h3>FullStack Developer</h3>
+                        <p>In this study Program, I acquired a solid foundation in Fullstack JavaScript Development, complemented with soft skills. I learned how to create complete web applications using HTML, CSS, JavaScript, Express, Node.js, MySQL and PostgreSQL. Program Duration: Dec 2021 - April 2022</p>
+                    </div>
+                </div>
+
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </section>
+
 
     <!-- portfolio section design -->
     <section class="portfolio services" id="portfolio">
@@ -190,51 +173,115 @@
         </div>
     </section>
 
-    
-    <!-- portfolio section design -->
-    <section class="portfolio-2 services" id="portfolio">
-        <h2 class="heading"><span>Stack</span></h2>
+    <!-- testimonial design -->
+    <section id="certifications" class="testimonial-container">
+        <h2 class="heading">Certifications and <span>Badges</span></h2>
 
-        <div class="portfolio-container-2">
-            <div class="portfolio-box-2">
-                <img src="images/8546827_aws_icon.png" alt="">
-            </div>
-            <div class="portfolio-box-2">
-                <img src="images/317755_badge_html_html5_achievement_award_icon.svg" alt="">
-            </div>
-            <div class="portfolio-box-2">
-                <img src="images/317756_badge_css_css3_achievement_award_icon.svg" alt="">
-            </div>
-            <div class="portfolio-box-2">
-                <img src="images/8546808_bootstrap_icon.svg" alt="">
-            </div>
-            <div class="portfolio-box-2">
-                <img src="images/icons8-viento-de-cola-css.svg" alt="">
+        <h2 class="heading subtitle"><span>Web</span> Design</h2>
 
-                <!-- <div class="portfolio-layer">
-                    <h4>Landing Tesla</h4>  
-                </div> -->
+        <div class="testimonial-wrapper">
+            <div class="testimonial-box mySwiper">
+                <div class="testimonial-content swiper-wrapper">
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/Cert-Incubadora.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/Cert-DesafioLatam.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/Cert-CursoJavascript.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/cursoMongoDB-NodeJs.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
             </div>
-            <div class="portfolio-box-2">
-                <img src="images/4373213_js_logo_logos_icon.png" alt="">
-            </div>
-            <div class="portfolio-box-2">
-                <img src="images/icons8-reaccionar-nativo.svg" alt="">
-            </div>
-            <div class="portfolio-box-2">
-                <img src="images/icons8-nodo-js.svg" alt="">
-            </div>
-            <div class="portfolio-box-2">
-                <img src="images/SQL-logo.svg" alt="">
-            </div>
-            <!-- <div class="portfolio-box">
-                <img src="images/4691301_kubernetes_icon.svg" alt="">
-            </div>
-            <div class="portfolio-box">
-                <img src="images/2993785_docker_social media_icon.svg" alt="">
-            </div> -->
         </div>
-    </section>
+
+        <h2 class="heading subtitle">AWS</h2>
+
+        <div class="testimonial-wrapper">
+            <div class="testimonial-box mySwiper">
+                <div class="testimonial-content swiper-wrapper">
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/Cert-CloudAdministratorAWSReStart.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/Cert-CloudEssentialsKnowledgeBdge.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/Cert-ComputeKnowledgeBadge.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/Cert-Compute.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+
+        <h2 class="heading subtitle"><span>Badges</span></h2>
+
+        <div class="testimonial-wrapper">
+            <div class="testimonial-box mySwiper">
+                <div class="testimonial-content-badge swiper-wrapper">
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-certified-cloud-practitioner.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-re-start-graduate.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-cloud-quest-cloud-practitioner.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-knowledge-cloud-essentials.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-knowledge-migration-foundations.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-knowledge-compute.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-educate-getting-started-with-cloud-ops.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-educate-getting-started-with-compute.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-educate-getting-started-with-databases.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-educate-getting-started-with-networking.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-educate-getting-started-with-security.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-educate-getting-started-with-serverless.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-educate-getting-started-with-storage.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-educate-introduction-to-cloud-101.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+    </section> 
 
     <!-- testimonial design -->
     <!-- <div class="testimonial-container">
@@ -245,7 +292,7 @@
                 <div class="testimonial-content swiper-wrapper">
                     <div class="testimonial-slide swiper-slide">
                         <img src="images/testimonial1.jpg" alt="">
-                        <h3>Jackson Levi</h3>
+                        <h3>Nathalie Carrasco</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
                             iure delectus corrupti impedit, beatae aperiam ad iusto nostrum possimus cum pariatur harum
                             assumenda suscipit a, qui, tempora maxime nulla facere quo ipsum tempore. Atque libero
@@ -255,17 +302,7 @@
                     </div>
                     <div class="testimonial-slide swiper-slide">
                         <img src="images/testimonial2.jpg" alt="">
-                        <h3>Flora Ocean</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
-                            iure delectus corrupti impedit, beatae aperiam ad iusto nostrum possimus cum pariatur harum
-                            assumenda suscipit a, qui, tempora maxime nulla facere quo ipsum tempore. Atque libero
-                            provident ad aut officia pariatur voluptate quaerat delectus nesciunt, sequi eligendi
-                            aperiam fugit unde nihil, iste similique illum. Dignissimos enim officia consequuntur
-                            dolores.</p>
-                    </div>
-                    <div class="testimonial-slide swiper-slide">
-                        <img src="images/testimonial3.jpg" alt="">
-                        <h3>Julian Grayson</h3>
+                        <h3>Andrea Montecinos</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
                             iure delectus corrupti impedit, beatae aperiam ad iusto nostrum possimus cum pariatur harum
                             assumenda suscipit a, qui, tempora maxime nulla facere quo ipsum tempore. Atque libero
