--- a/index.html
+++ b/index.html
@@ -53,18 +53,23 @@
 
             </div>
 
-            <a href="images/C.V Angel Salazar Mottola.pdf" target="_blank" rel="noopener noreferrer" class="btn">Download CV</a>
+            <a href="images/CV.Angel-Salazar.pdf" target="_blank" rel="noopener noreferrer" class="btn">Download CV</a>
         </div>
 
         <div class="profession-container">
             <div class="profession-box">
+                <div class="profession" style="--i:1;">
+                    <i class='bx bxl-aws'></i>
+                    <h3>AWS Cloud</h3>
+                </div>
                 <div class="profession" style="--i:0;">
                     <i class='bx bx-code-alt'></i>
                     <h3>Web Developer</h3>
                 </div>
-                <div class="profession" style="--i:1;">
-                    <i class='bx bxl-aws'></i>
-                    <h3>AWS Computing</h3>
+                <div class="profession" style="--i:2;">
+                    <!-- <i class='bx bx-code-alt'></i> -->
+                    <i class='bx bxs-shield-plus'></i>
+                    <h3>Cybersecurity</h3>
                 </div>
 
                 <div class="circle"></div>
@@ -87,7 +92,7 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Hi, I'm Here To Help Your Next Project!</h3>
-            <p>I am a Full Stack Programmer with experience in web application development. I have worked in a team of collaborative development, where I have contributed with my technical skills and my ability to solve problems efficiently. As an AWS Certified Cloud Practitioner and AWS Cloud Re/Start Administrator, I have a strong understanding of cloud services and AWS infrastructure, allowing me to develop and maintain scalable and secure applications. I stand out for my strong work ethic, effective communication skills and ability to work well in a team. I am constantly looking for opportunities to learn and grow in the field of information technology. English level B1</p>
+            <p>I am a technology enthusiast and passionate about the Cloud world, which has allowed me to develop a solid background in the cloud. I have the AWS Solutions Architect Associate certification, which together with my knowledge in cybersecurity supported by the Fortinet Certified Associate Cybersecurity certification, drives and motivates me to build secure and reliable solutions and architectures. I have experience in implementation and project management with Jira, which allows me to manage projects efficiently and always look for opportunities to learn and grow. My goal is to contribute to high-performing teams and achieve exceptional results. I am committed to delivering innovative and efficient solutions, I am a fan and example of constant learning and I have strong communication and teamwork skills.</p>
             <!-- <a href="#" class="btn">Read More</a> -->
         </div>
     </section>
@@ -96,6 +101,13 @@
     <section class="services" id="experience">
         <h2 class="heading">Work <span>Experience</span></h2>
 
+        <div class="services-container">
+            <div class="services-box">
+                <img src="images/LogoS4E-logo.png" alt="">
+                <h3>Dev Engineer</h3>
+                <p>Implementation and administration of Atlassian solutions (Jira, Bitbucket, Confluence). Planning, execution and monitoring of projects from conception to delivery. Implementation and management of infrastructures in AWS.</p>
+            </div>
+        </div>
         <div class="services-container">
             <div class="services-box">
                 <img src="images/lofwork.png" alt="">
@@ -177,11 +189,29 @@
     <section id="certifications" class="testimonial-container">
         <h2 class="heading">Certifications and <span>Badges</span></h2>
 
-        <h2 class="heading subtitle"><span>Web</span> Design</h2>
+        <h2 class="heading subtitle"><span>Certificates</h2>
 
         <div class="testimonial-wrapper">
             <div class="testimonial-box mySwiper">
                 <div class="testimonial-content swiper-wrapper">
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/Cert-CloudAdministratorAWSReStart.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/Cert-CloudEssentialsKnowledgeBdge.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/Cert-ComputeKnowledgeBadge.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/Cert-Compute.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/Certificado-Aprobación-AnalistaSOC-resility.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/hacker-mentor-certtificado.jpg" alt="">
+                    </div>
                     <div class="testimonial-slider swiper-slide">
                         <img src="images/Cert-Incubadora.png" alt="">
                     </div>
@@ -202,36 +232,17 @@
             </div>
         </div>
 
-        <h2 class="heading subtitle">AWS</h2>
-
-        <div class="testimonial-wrapper">
-            <div class="testimonial-box mySwiper">
-                <div class="testimonial-content swiper-wrapper">
-                    <div class="testimonial-slider swiper-slide">
-                        <img src="images/Cert-CloudAdministratorAWSReStart.png" alt="">
-                    </div>
-                    <div class="testimonial-slider swiper-slide">
-                        <img src="images/Cert-CloudEssentialsKnowledgeBdge.png" alt="">
-                    </div>
-                    <div class="testimonial-slider swiper-slide">
-                        <img src="images/Cert-ComputeKnowledgeBadge.png" alt="">
-                    </div>
-                    <div class="testimonial-slider swiper-slide">
-                        <img src="images/Cert-Compute.png" alt="">
-                    </div>
-                </div>
-
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
-            </div>
-        </div>
-
-        <h2 class="heading subtitle"><span>Badges</span></h2>
+        <h2 class="heading subtitle"><span>AWS Badges</span></h2>
 
         <div class="testimonial-wrapper">
             <div class="testimonial-box mySwiper">
                 <div class="testimonial-content-badge swiper-wrapper">
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-certified-solutions-architect-associate.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/aws-partner-technical-accredited.png" alt="">
+                    </div>
                     <div class="testimonial-slider swiper-slide">
                         <img src="images/aws-certified-cloud-practitioner.png" alt="">
                     </div>
@@ -273,6 +284,40 @@
                     </div>
                     <div class="testimonial-slider swiper-slide">
                         <img src="images/aws-educate-introduction-to-cloud-101.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+
+        <h2 class="heading subtitle"><span>CYbersecurity Badges</span></h2>
+
+        <div class="testimonial-wrapper">
+            <div class="testimonial-box mySwiper">
+                <div class="testimonial-content-badge swiper-wrapper">
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/fortinet-certified-associate-cybersecurity.1.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/fortinet-certified-fundamentals-cybersecurity.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/introduction-to-cybersecurity.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/fundamentos-de-gobernanza-de-la-ciberseguridad-octu.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/fundamentos-de-sgsi-octubre-2024.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/masterclass-implementador-lider-iso-27-701-attendee.png" alt="">
+                    </div>
+                    <div class="testimonial-slider swiper-slide">
+                        <img src="images/workshop-conceptos-basicos-de-ciberataques-attendee.png" alt="">
                     </div>
                 </div>
 
